# tosbindl

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  tosbindl.c  tosbindl.h
src/gemdos/: CMakeLists.txt  autotest.lua  gemdos_c.c  gemdos_c.h  gemdos_d.c  gemdos_d.h  gemdos_f.c  gemdos_f.h  gemdos_m.c  gemdos_m.h  gemdos_p.c  gemdos_p.h  gemdos_s.c  gemdos_s.h  gemdos_t.c  gemdos_t.h  gemdosi.c  gemdosi.h  tbgemdos.c  tbgemdos.h
src/gemdos/lua/filelist/: init.lua
src/gemdos/unittest/: cauxin.lua  cauxis.lua  cauxos.lua  cauxout.lua  cconin.lua  cconis.lua  cconos.lua  cconout.lua  cconrs.lua  cconws.lua  cnecin.lua  cprnos.lua  cprnout.lua  crawcin.lua  crawio.lua  dcreate.lua  ddelete.lua  dfree.lua  dgetdrv.lua  dgetpath.lua  dsetdrv.lua  dsetpath.lua  fattrib.lua  fcestdhd.lua  fclose.lua  fcreate.lua  fdatime.lua  fdelete.lua  fdup.lua  fforce.lua  fopen.lua  fread.lua  frename.lua  fseek.lua  fsfirst.lua  fsnext.lua  fwrite.lua  malloc.lua  mfree.lua  mshrink.lua  (+12 more)
